--- a/LuanVanTotNghiep/Views/NguoiDung/DangKy.cshtml
+++ b/LuanVanTotNghiep/Views/NguoiDung/DangKy.cshtml
@@ -7,141 +7,143 @@
 
 <div class="container">
     <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li class="active">Account</li>
     </ol>
-    <div class="registration">
-        <div class="registration_left">
-            <h2>new user? <span> create an account </span></h2>
-            <!-- [if IE]
-               < link rel='stylesheet' type='text/css' href='ie.css'/>
-            [endif] -->
-            <!-- [if lt IE 7]>
-               < link rel='stylesheet' type='text/css' href='ie6.css'/>
-            <! [endif] -->
-            <script>
-                (function () {
+    <div class="row">
+        <div class="column">
+            <div class="registration_left">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h1>Tạo mới tài khoản </h1>
+                    @using (Html.BeginForm("dangky", "nguoidung", FormMethod.Post, new { @class = "form-horizontal", @id = "form-validation" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group">
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            @if (ViewBag.Success != null)
+                            {
+                                <div class="alert alert-success">@ViewBag.Success</div>
+                            }
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Họ và tên: </label>
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "validate[required] form-control", @name = "Name", @id = "Name" } })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Đia chỉ: </label>
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "validate[required] form-control", @name = "Address", @id = "Address" } })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">E-mail: </label>
 
-                    // Create input element for testing
-                    var inputs = document.createElement('input');
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "validate[required,custom[email]] form-control", @type = "text", @name = "Email", @id = "Email" } })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Số điện thoại: </label>
 
-                    // Create the supports object
-                    var supports = {};
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "validate[required,custom[number]] form-control", @type = "text", @name = "sdt", @id = "sdt" } })
 
-                    supports.autofocus = 'autofocus' in inputs;
-                    supports.required = 'required' in inputs;
-                    supports.placeholder = 'placeholder' in inputs;
+                            </div>
+                        </div>
 
-                    // Fallback for autofocus attribute
-                    if (!supports.autofocus) {
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Tên đăng nhập : </label>
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "validate[required] form-control", @type = "text", @name = "UserName", @id = "UserName" } })
 
+                            </div>
+                        </div>
+                    <div class="form-group">
+                            <label class="control-label col-sm-3">Mật khẩu: </label>
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "validate[required,minSize[6],maxSize[20]] form-control", @type = "password", @name = "Password", @id = "Password" } })
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Nhập lại mật khẩu</label>
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "validate[required,equals[Password]] form-control", @type = "password", @name = "ConfirmPassword", @id = "ConfirmPassword" } })
+
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Ngày sinh</label>
+
+                            <div class="col-lg-8">
+                                @Html.EditorFor(model => model.Birthday, new { htmlAttributes = new { @class = "validate[required,custom[date]] form-control", @type = "date", @name = "Birthday", @id = "Birthday" } })
+
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Giới tính</label>
+                            <div class="col-lg-8">
+                                <div class="checkbox">
+                                    @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @value = "true", @name = "Sex", @id = "Sex" } }) <p>Nam</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-lg-8 col-lg-offset-4">
+                                <input type="submit" value="Đăng ký" class="item_add items">
+                                <input type="reset" value="Reset" class="btn btn-primary">
+                            </div>
+                        </div>
                     }
+                </div>
 
-                    // Fallback for required attribute
-                    if (!supports.required) {
-
-                    }
-
-                    // Fallback for placeholder attribute
-                    if (!supports.placeholder) {
-
-                    }
-
-                    // Change text inside send button on submit
-                    var send = document.getElementById('register-submit');
-                    if (send) {
-                        send.onclick = function () {
-                            this.innerHTML = '...Sending';
-                        }
-                    }
-
-                })();
-            </script>
-            <div class="registration_form">
-                <!-- Form -->
-                <form>
-                    <div>
-                        <label>
-                            <input placeholder="first name" type="text" tabindex="1">
-                        </label>
-                    </div>
-                    <div>
-                        <label>
-                            <input placeholder="last name" type="text" tabindex="2">
-                        </label>
-                    </div>
-                    <div>
-                        <label>
-                            <input placeholder="email address" type="email" tabindex="3">
-                        </label>
-                    </div>
-                    <div>
-                        <label>
-                            <input placeholder="Mobile" type="email" tabindex="3">
-                        </label>
-                    </div>
-                    <div class="sky_form1">
-                        <ul>
-                            <li><label class="radio left"><input type="radio" name="radio" checked=""><i></i>Male</label></li>
-                            <li><label class="radio"><input type="radio" name="radio"><i></i>Female</label></li>
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div>
-                        <label>
-                            <input placeholder="password" type="password" tabindex="4">
-                        </label>
-                    </div>
-                    <div>
-                        <label>
-                            <input placeholder="retype password" type="password" tabindex="4">
-                        </label>
-                    </div>
-                    <div>
-                        <input type="submit" value="create an account" id="register-submit">
-                    </div>
-                    <div class="sky-form">
-                        <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>i agree Terms & conditions &nbsp;<a class="terms" href="#"> terms of service</a> </label>
-                    </div>
-                </form>
-                <!-- /Form -->
             </div>
         </div>
-        <div class="registration_left">
-            <h2>existing user</h2>
-            <div class="registration_form">
-                <!-- Form -->
-                <form>
-                    <div>
-                        <label>
-                            <input placeholder="email" type="email" tabindex="3" required>
-                        </label>
-                    </div>
-                    <div>
-                        <label>
-                            <input placeholder="password" type="password" tabindex="4" required>
-                        </label>
-                    </div>
-                    <div>
-                        <input type="submit" value="sign in">
-                    </div>
-                    <div class="forget">
-                        <a href="#">forgot your password</a>
-                    </div>
-                </form>
-                <!-- /Form -->
+        <div class="column">
+            <div class="registration_left">
+                <h2>existing user</h2>
+                <div class="registration_form">
+                    <!-- Form -->
+                    <form>
+                        <div>
+                            <label>
+                                <input placeholder="email" type="email" tabindex="3" required>
+                            </label>
+                        </div>
+                        <div>
+                            <label>
+                                <input placeholder="password" type="password" tabindex="4" required>
+                            </label>
+                        </div>
+                        <div>
+                            <input type="submit" value="sign in">
+                        </div>
+                        <div class="forget">
+                            <a href="#">forgot your password</a>
+                        </div>
+                    </form>
+                    <!-- /Form -->
+                </div>
             </div>
+            <div class="clearfix"></div>
         </div>
-        <div class="clearfix"></div>
     </div>
+
+
 </div>
 
 
-
-<script>
-        jQuery(document).ready(function(){
+@section scripts{
+    <script>
+        jQuery(document).ready(function () {
             // binds form submission and fields to the validation engine
-            jQuery("#dangky").validationEngine();
+            jQuery("#form-validation").validationEngine();
         });
 
-</script>
+    </script>
+}
