--- a/LuanVanTotNghiep/app/View/GioHang.html
+++ b/LuanVanTotNghiep/app/View/GioHang.html
@@ -93,7 +93,7 @@
                                     <p>{{ giohang.NGAYDAT | date : 'dd/MM/y' }}</p>
                                 </td>
                                 <td>
-                                    <p>{{ giohang.TRANGTHAIBAN ? 'Đã duyệt' : 'Chưa duyệt'  }}</p>
+                                    <p>{{ giohang.TRANGTHAI ? 'Đã duyệt' : 'Chưa duyệt'  }}</p>
                                 </td>
                                 <td>
                                     <p>{{ giohang.DIACHINHAN}}</p>
