--- a/LuanVanTotNghiep/app/View/NhanVien.html
+++ b/LuanVanTotNghiep/app/View/NhanVien.html
@@ -39,7 +39,7 @@
                             <div class="form-group col-xs-6">
                                 <label for="manhahang" class="col-md-2 control-label">Nhà hàng</label>
                                 <div class="col-md-10 space">
-                                    <input ng-show="updateShow" ng-disabled="addnhanvien.$valid" type="text" class="form-control" id="manhahang" placeholder="" value="nhahang.TENNHAHANG" />
+                                    <input ng-show="updateShow" ng-disabled="addnhanvien.$valid" type="text" class="form-control" id="manhahang" placeholder="" ng-true-value="newnhanvien.nhahang.TENNHAHANG" />
                                     <select ng-show="addShow" ng-disabled="addnhanvien.$valid" class="form-control" name="manhahang" ng-init="newnhanvien.MANHAHANG=nhahangs[0].ID" ng-model="newnhanvien.MANHAHANG" ng-options="nhahang.MANHAHANG as nhahang.TENNHAHANG for nhahang in nhahangs track by nhahang.MANHAHANG"></select>
                                 </div>
                             </div>
