--- a/LuanVanTotNghiep/Areas/Admin/Views/Login/Index.cshtml
+++ b/LuanVanTotNghiep/Areas/Admin/Views/Login/Index.cshtml
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Đăng nhập</title>
+    <title>Đăng nhập hệ thống</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
