--- a/LuanVanTotNghiep/Views/Home/Index.cshtml
+++ b/LuanVanTotNghiep/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model List<LuanVanTotNghiep.Models.MONAN>
+﻿@using LuanVanTotNghiep.Models;
+@using PagedList.Mvc;
+@model PagedList.IPagedList<LuanVanTotNghiep.Models.MONAN>
+
 @{
     ViewBag.Title = "Trang chủ";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -51,19 +54,16 @@
             @foreach (var item in Model)
             {
                 var link = "/sanpham/chitiet/" + item.MAMON;
-                <div class="col-md-3 feature-grid">
+                <div class="col-sm-3 feature-grid">
 
-                    @*<a href="@link">*@
+                    <a href="@link">
 
                         <img src="@item.HINHANH.DUONGDAN1" alt="@item.TENGOI" />
                         <div class="arrival-info">
-                            <h4 style="font-size: 30px; color:black">@item.TENGOI</h4>
-                            <p style="color:red">Giá @item.DONGIA VND</p>
-                            @*<button type="button" title="Add to Cart" class="item_add item add-to-cart" data-id="@item.MAMON">
-            <span class="glyphicon glyphicon-shopping-cart"></span>
-        </button>*@
+                            <h4 style="color:black">@item.TENGOI</h4>
+                            <p style="color:red">Giá @item.DONGIA.GetValueOrDefault(0).ToString("#,##0").Replace(',', '.') VND</p>
                             @*<p class="item_add items">@Ajax.ActionLink("THÊM VÀO GIỎ HÀNG", "ThemGioHang", "giohang", new { @productID = item.MAMON, @strURL = Request.Url.ToString() }, new AjaxOptions { HttpMethod = "GET", UpdateTargetId = "divGioHang", InsertionMode = InsertionMode.Replace })</p>*@
-                            @using (Html.BeginForm("ThemGioHang", "GioHang", new { @productID = item.MAMON, @quantity = 1 , @strURL = Request.Url.ToString() }))
+                            @using (Html.BeginForm("ThemGioHang", "GioHang", new { @productID = item.MAMON, @quantity = 1, @strURL = Request.Url.ToString() }))
                             {
                                 <input type="submit" style="cursor:pointer" value="Thêm vào giỏ hàng" id="btnGioHang" class="item_add items">
                             }
@@ -73,10 +73,15 @@
                         <div class="viw">
                             <a href="@link"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>Chi tiết</a>
                         </div>
-                    @*</a>*@
+                    </a>
                 </div>
             }
             <div class="clearfix"></div>
+        </div>  
+        <div class="dlink" style="float: right">
+
+            @Html.PagedListPager(Model, page => Url.Action("index", "home", new { @page = page }))
+            đang ở trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)/@Model.PageCount trang
         </div>
     </div>
 </div>
