--- a/LuanVanTotNghiep/Views/Shared/_Layout.cshtml
+++ b/LuanVanTotNghiep/Views/Shared/_Layout.cshtml
@@ -6,21 +6,29 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
+    <link rel='icon' href='favicon.ico' type='image/x-icon' />
     <link href="~/Assets/client/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Custom Theme files -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <!--theme style-->
     <link href="~/Assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
     <script src="~/Assets/client/js/jquery.min.js"></script>
-
+    <link href="~/Assets/client/test.css" rel="stylesheet" />
     <!--//theme style-->
     <!--bat loi-->
-    <link href="~/Assets/client/css/template.css" rel="stylesheet" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jQuery-Validation-Engine/2.6.4/validationEngine.jquery.min.css" />
+    @*<script src="//code.jquery.com/jquery.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jQuery-Validation-Engine/2.6.4/jquery.validationEngine.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jQuery-Validation-Engine/2.6.4/languages/jquery.validationEngine-en.min.js"></script>*@
+    @*<link href="~/Assets/client/css/template.css" rel="stylesheet" />*@
     <link href="~/Assets/client/css/validationEngine.jquery.css" rel="stylesheet" />
-    @*<script src="~/Assets/client/js/jquery-1.8.2.min.js"></script>*@
     <script src="~/Assets/client/js/jquery.validationEngine-vi.js"></script>
     <script src="~/Assets/client/js/jquery.validationEngine.js"></script>
     <!--//end-->
+    <!--thong bao toastr-->
+    <link href="~/Content/toastr.css" rel="stylesheet" />
+    <script src="~/Scripts/toastr.js"></script>
+    <!--//thong bao toastr-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -74,7 +82,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                         </div>
                     </li>
-                    <li class="grid"><a href="typo.html">Đặt bàn</a></li>
+                    <li class="grid"><a href="/datban/datban">Đặt bàn</a></li>
                 </ul>
             </div>
             <!--checkout-->
@@ -125,6 +133,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 
     @RenderSection("scripts", required: false)
+    @Html.Partial("_Toastr")
     <!---->
 </body>
 </html>
